updated outline width

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         #upload{
             outline-style: dotted;
             outline-color: cornsilk;
+            outline-width: thick;
             text-align: center;
             cursor: pointer;
             width: 95%;
