--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
     <br>
     <br>
     <label for="mean">Mean Delay</label>
-    <input type="range" id="mean" min="1" max="300" value="60" oninput="this.nextElementSibling.value = this.value+' s'">
+    <input type="range" id="mean" min="1" max="300" step="1" value=60 oninput="this.nextElementSibling.value = this.value+' s'">
     <output>60 s</output>
     <br><br>
     <label for="std">Spread</label>
-    <input type="range" id="std" min="1" max="30" value="10" oninput="this.nextElementSibling.value = this.value+' s'">
+    <input type="range" id="std" min="1" max="30" step="1" value=10 oninput="this.nextElementSibling.value = this.value+' s'">
     <output>10 s</output>
 
     <br><br>
