set the values of the sliders at the end

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
             console.error('Error playing the audio:', error.message);
             window.alert("Error playing audio file.");
         });
+        document.getElementById("mean_range").value = 60;
+        document.getElementById("std_range").value = 10;
     </script>
 </body>
 </html>
